fixed category header spacing- vertical align center

--- a/app/assets/stylesheets/bootstrap3.css.less
+++ b/app/assets/stylesheets/bootstrap3.css.less
@@ -12,9 +12,6 @@
 @circle-bkg-color: #fff;
 @title-bar-height: 3em;
 @category: #f2f2f2;
-@cat-header-height: 42px;
-@cat-line-height: 1.5;
-@vert-align-cat: baseline;
 @panel-default-border: white;
 @panel-default-heading-bg: @gray-lighter;
 @panel-primary-border: white;
@@ -80,7 +77,7 @@
   .row;
   > * {
     height: 100%;
-    vertical-align: middle;
+    vertical-align: baseline;
     line-height: 2em;
   }
   background-color: @category;
@@ -90,45 +87,37 @@
     .make-sm-column(6);
     .make-lg-column(6);
     margin-bottom: 0;
-    background-color: blue;
-    h2 {
-      font-weight: bold;
-      font-size: 1.5em;
-      text-transform: uppercase;
-    }
+    font-size: 1.5em;
+    font-weight: bold;
+    text-transform: uppercase;
+
   }
   .category-header-percent {
     .make-lg-column(2);
     .make-md-column(2);
-    background-color: yellow;
 
     .title-circle {
-      height: 1.5em;
-      width: 1.5em;
-      font-size: 2em;
-      border-radius: .75em;
+      height: 42px;
+      width: 42px;
+      border-radius: 21px;
       background-color: @circle-bkg-color;
-      margin: 10px auto;
+      margin: auto;
+      padding-top: 5px;
       text-align: center;
-      h2 {
-        margin: auto;
-      }
+      font-size: 24px;
     }
   }
   .category-header-fraction {
     .make-md-column(2);
     .make-sm-column(2);
     font-weight: 800;  
-    height: @cat-header-height;
-    line-height: @cat-line-height;
-    background-color: red;
+    font-size: 18px;
   }
 }
 
 .row {
   margin-top: 1em;
   > * {
-    height: 100%;
     vertical-align: middle;
   }
 
@@ -146,16 +135,16 @@
     background-color: yellow;
 
     .circle-listing {
-      height: 3em;
-      width: 3em;
-      border-radius: 1.5em;
+      height: 75px;
+      width: 75px;
+      border-radius: 35px;
       background-color: @circle-bkg-color;
       border: 2px solid @circle-border;
       margin: 10px auto;
       text-align: center;
       vertical-align: middle;
       font-weight: 200;
-      font-size: 30px;     
+      font-size: 28px;     
     }
   }
   .fraction-listing {
